Hooked up xeditable User CRUD.

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,10 @@
 
     <!-- build:js({.tmp,src}) scripts/app.js -->
     <script src="app/index.js"></script>
+
+    <!-- load all the domain models -->
+    <script src="app/modules/user/model/User.js"></script>
+
     <script src="app/main/main.controller.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
 
