--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/foundation/css/foundation.css" />
+    <link rel="stylesheet" href="../bower_components/angular-xeditable/dist/css/xeditable.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -55,6 +56,7 @@
     <script src="../bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="../bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="../bower_components/foundation/js/foundation.js"></script>
+    <script src="../bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
